[package]
name = "async-server"
description = """
    Various helpers for writing production-ready servers in
    rust using async-std.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["async", "server", "backpressure", "accept", "listen"]
categories = ["network-programming"]
homepage = "https://github.com/tailhook/async-server"
documentation = "https://docs.rs/async-server"
version = "0.1.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
edition = "2018"

[dependencies]
async-std = "1.4"

[dev-dependencies]
rand = "0.7.2"
